--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -5,4 +5,4 @@ task:
     build_script: ASSUME_ALWAYS_YES=yes pkg bootstrap -f
     install_script: make BATCH=yes package
     binaries_artifacts:
-        path: "/usr/ports/packages/*"
+        path: "work/pkg/*"
