--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,9 @@
-freebsd_instance:
-    image_family: freebsd-12-2
-
 task:
+    freebsd_instance:
+      matrix:
+        - image: freebsd-12-1-release-amd64
+        - image: freebsd-12-2-release-amd64
+
     build_script: ASSUME_ALWAYS_YES=yes pkg bootstrap -f
     install_script: make BATCH=yes package
     binaries_artifacts:
